# Adaptive-Chern-Self-Healing-Conductance-Law-Verified-Benchmark-Release

./: .gitignore  README.md  pyproject.toml
benchmarks/: run_fixed_ruler_control.py  run_matched_present.py  run_no_topology_feedback.py  run_onset_sweep.py  run_principal_branch_control.py  run_recovery_demo.py  run_solver_checks.py
configs/: ablation_fixed_ruler.yaml  ablation_no_topology.yaml  ablation_principal.yaml  onset_sweep.yaml  recovery_default.yaml
outputs/: manifest.json
outputs/logs/: recovery_demo.txt
outputs/matched_present/: matched_present_summary.csv  matched_present_summary.json
outputs/onset_map/: onset_alpha0_lambda_s.csv  onset_chi_damage_scale.csv  summary.json
outputs/recovery_demo/: recovery_traces.csv  summary.json
outputs/solver_verification/: verdict.json
outputs/units_theory/: verdict.json
src/arp_topology/: __init__.py  lattice.py  laws.py  metrics.py  phase_lift.py  plotting.py  protocols.py  solver.py  topology.py
src/arp_topology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_phase_lift_invariants.py  test_reductions.py  test_solver_consistency.py  test_units.py
